--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     background: linear-gradient(89deg, #ff5edf 0%, #04c8de 100%);
 }
-
-code {
+x code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
 }
